[gd_scene load_steps=5 format=3 uid="uid://6jilea2pwjuk"]

[ext_resource type="Script" uid="uid://b0huugt6j0ojv" path="res://UI/Dialogs/EditPaletteDialog.gd" id="2"]
[ext_resource type="PackedScene" path="res://UI/Components/PaletteButton.tscn" id="3"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.270588, 0.27451, 0.294118, 1)
expand_margin_left = 1.0
expand_margin_right = 1.0

[sub_resource type="StyleBoxEmpty" id="2"]

[node name="EditPaletteDialog" type="MarginContainer"]
offset_right = 486.0
offset_bottom = 495.0
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12
script = ExtResource("2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 12

[node name="ColorPicker" type="ColorPicker" parent="HBoxContainer"]
layout_mode = 2
edit_alpha = false
presets_visible = false

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="NameLineEdit" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("2")

[node name="ColorGrid" type="GridContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
columns = 4

[node name="PaletteButton" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton2" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton3" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton4" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton5" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton6" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton7" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton8" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton9" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton10" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton11" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton12" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton13" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton14" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton15" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton16" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton17" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton18" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton19" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton20" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton21" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton22" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton23" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="PaletteButton24" parent="HBoxContainer/VBoxContainer/ColorGrid" instance=ExtResource("3")]
layout_mode = 2

[node name="AddColorButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Add Color"

[node name="RemoveColorButton" type="Button" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Remove Color"
